[project]
name = "environmental-sample-analysis"
version = "0.1.0"
description = "Computer Vision & Gen AI pipeline for environmental sample analysis"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
vision = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",
    "timm>=0.9.0",
    "Pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
]
rag = [
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.20",
    "chromadb>=0.4.0",
    "pypdf>=3.17.0",
    "sentence-transformers>=2.2.0",
    "anthropic>=0.20.0",
    "streamlit>=1.30.0",
]
mlops = [
    "mlflow>=2.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
